--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -1,3 +1,7 @@
+.width80 {
+  width: 80%;
+}
+
 main > div {
   width: 100%;
   background-color: rgb(3, 70, 213);
@@ -174,7 +178,7 @@ main > div {
 .services > .row {
   width: 90%;
   margin: auto;
-  justify-content: space-evenly;
+  justify-content: center;
   padding: 50px 0;
 }
 .items > .row article,
@@ -186,6 +190,7 @@ main > div {
   flex-wrap: wrap;
   justify-content: center;
   margin: 50px;
+  position: relative;
 }
 .items > .row article > *,
 .services > .row article > * {
@@ -218,6 +223,7 @@ main > div {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  cursor: pointer;
 }
 .items > .row article > div > div:hover i:nth-of-type(1),
 .services > .row article > div > div:hover i:nth-of-type(1) {
@@ -237,6 +243,11 @@ main > div {
 .items > .row article > div > div > h2,
 .services > .row article > div > div > h2 {
   padding-top: 30px;
+}
+.items > .row article > div > div > a,
+.services > .row article > div > div > a {
+  position: absolute;
+  bottom: 10px;
 }
 .items > .row article > div > div > div,
 .services > .row article > div > div > div {
@@ -258,6 +269,7 @@ main > div {
 .items > .row article > div > div > div > i > svg,
 .services > .row article > div > div > div > i > svg {
   color: #ffa737;
+  width: 48px;
 }
 .items > .row article > div > div > div > i:nth-of-type(1),
 .services > .row article > div > div > div > i:nth-of-type(1) {
@@ -287,16 +299,53 @@ main > div {
 }
 
 .services {
-  background-color: rgb(1, 1, 100);
+  background-color: #000c47;
+  background-image: url(../img/pattern_background.webp);
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+}
+.services > .row {
+  margin-bottom: 174px;
 }
 .services article {
-  width: 250px !important;
+  background-color: #001061 !important;
+  color: white;
+  width: 300px !important;
+  margin: 14px !important;
 }
 .services article a {
-  color: orangered;
+  color: #ffa737;
   display: flex;
   justify-content: center;
   width: 100%;
+  margin: 20px;
+}
+.services article p {
+  height: 200px;
+  margin-bottom: 75px !important;
+}
+.services > .services_header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  margin: 80px 0;
+}
+.services > .services_header > * {
+  width: 100%;
+}
+.services > .services_header > h2 {
+  text-align: center;
+  font-size: 35px;
+  margin: 30px 0;
+}
+.services > .services_header > p {
+  width: 40%;
+  text-align: center;
+  line-height: 30px;
+  font-size: 20px;
 }
 
 .free {
@@ -369,4 +418,85 @@ main > div {
 }
 .footer_bottom > div > p {
   text-align: center;
+}
+
+.our_work {
+  background-color: #f7f8f9;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.our_work > .our_work_header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 100px;
+}
+.our_work > .our_work_header > h2 {
+  font-size: 40px;
+}
+.our_work > .our_work_header > p {
+  color: #5f6166;
+  width: 80%;
+  text-align: center;
+  line-height: 30px;
+  margin-top: 30px;
+  font-size: 20px;
+}
+.our_work > .piture_content {
+  margin-top: 100px;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 26px;
+}
+.our_work > .piture_content > div {
+  width: 400px;
+  height: 300px;
+  position: relative;
+}
+.our_work > .piture_content > div:hover > div {
+  visibility: visible;
+  opacity: 1;
+}
+.our_work > .piture_content > div > div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(to top, #e8eaf0 0, #607afe 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.8s;
+  cursor: pointer;
+}
+.our_work > .piture_content > div > div > div > svg {
+  color: white;
+}
+.our_work > .piture_content > div > figure {
+  width: 100%;
+}
+.our_work > .piture_content > div > figure > img {
+  width: 400px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.our_work > .button {
+  margin-top: 110px;
+  margin-bottom: 140px;
+  color: white;
+}
+.our_work > .button > a {
+  padding: 13px 29px;
+  background-color: #ffa737;
+  border-radius: 25px;
+  font-size: 14px;
 }/*# sourceMappingURL=master.css.map */
