--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -1,3 +1,6 @@
+.width80 {
+  width: 80%;
+}
 main > div {
   width: 100%;
   background-color: rgb(3, 70, 213);
@@ -177,7 +180,7 @@ main > div {
   > .row {
     width: 90%;
     margin: auto;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 50px 0;
     article {
       padding: 20px;
@@ -188,6 +191,7 @@ main > div {
       flex-wrap: wrap;
       justify-content: center;
       margin: 50px;
+      position: relative;
       > * {
         // border: 1px solid red;
         margin: 15px 0;
@@ -212,21 +216,26 @@ main > div {
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-direction: column;
-          &:hover  i:nth-of-type(1) {
+          flex-direction: column; 
+          cursor: pointer;
+          &:hover i:nth-of-type(1) {
             left: 0;
             transition: 0.2s;
           }
-          &:hover  i:nth-of-type(2) {
+          &:hover i:nth-of-type(2) {
             left: 100px;
             transition: 0.2s;
           }
-          &:hover > h2{
+          &:hover > h2 {
             color: #ffa737;
-            transition: .7s;
+            transition: 0.7s;
           }
-          >h2{
+          > h2 {
             padding-top: 30px;
+          }
+          >a{
+            position: absolute;
+            bottom:10px;
           }
           > div {
             width: 100px;
@@ -237,6 +246,7 @@ main > div {
             > i {
               > svg {
                 color: #ffa737;
+                width: 48px;
               }
               width: 100%;
               height: 100%;
@@ -276,14 +286,52 @@ main > div {
 }
 .services {
   background-color: #000c47;
+  background-image: url(../img/pattern_background.webp);
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  // height: 100vh;
+  >.row{
+    margin-bottom: 174px;
+  }
   article {
-    width: 250px !important;
+    background-color: #001061 !important;
+    color: white;
+    width: 300px !important;
+    margin: 14px !important;
     // height: 400px !important;
     a {
-      color: orangered;
+      color: #ffa737;
       display: flex;
       justify-content: center;
       width: 100%;
+      margin: 20px;
+    }
+    p{
+      height: 200px;
+      margin-bottom: 75px !important;
+    }
+  }
+  >.services_header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    margin: 80px 0;
+    >*{
+      width: 100%;
+    }
+    >h2{
+      text-align: center;
+      font-size: 35px;
+      margin: 30px 0;
+    }
+    >p{
+      width: 40%;
+      text-align: center;
+      line-height: 30px;
+      font-size: 20px;
     }
   }
 }
@@ -362,6 +410,89 @@ main > div {
     }
     > p {
       text-align: center;
+    }
+  }
+}
+.our_work{
+  background-color: #f7f8f9;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  >.our_work_header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 100px;
+    >h2{
+      font-size: 40px;
+      
+    }
+    >p{
+      color: #5f6166;
+      width: 80%;
+      text-align: center;
+      line-height: 30px;
+      margin-top: 30px;
+      font-size: 20px;
+    }
+  }
+  >.piture_content{
+    margin-top: 100px;
+    // border: 6px solid yellowgreen;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 26px;
+    >div{
+      // background: red;
+      width: 400px;
+      height: 300px;
+      position: relative;
+      &:hover > div{
+        visibility: visible;
+        opacity: 1;
+      }
+      >div{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;left: 0;
+        background-image: linear-gradient(to top, #e8eaf0 0,#607afe  100%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        visibility: hidden;transition: 0.8s;
+        cursor: pointer;
+        >div{
+          >svg{
+            color: white;
+          }
+        }
+      }
+      >figure{
+        width: 100%;
+        // border: 3px solid black;
+        >img{
+          width: 400px;
+          height: 300px;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+  >.button{
+    margin-top: 110px;
+    margin-bottom: 140px;
+    color: white;
+    >a{
+      padding: 13px 29px;
+      background-color: #ffa737;
+      border-radius: 25px;
+      font-size: 14px;
     }
   }
 }
