--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -499,4 +499,140 @@ main > div {
   background-color: #ffa737;
   border-radius: 25px;
   font-size: 14px;
+}
+.our_work > .button > a:hover {
+  background-color: #ffb251;
+}
+
+.ourPlan {
+  position: relative;
+  background-image: url(../img/ghasem1.jpg);
+  background-size: cover;
+}
+.ourPlan > .ourPlan_header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+  margin-top: 130px;
+}
+.ourPlan > .ourPlan_header > h2 {
+  color: white;
+  font-size: 40px;
+}
+.ourPlan > .ourPlan_header > p {
+  color: white;
+  width: 30%;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  margin-top: 30px;
+}
+.ourPlan::before {
+  content: "";
+  background-image: linear-gradient(120deg, #3b46c4 0, #4750d9, #2581bd 100%);
+  opacity: 0.8;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+.ourPlan > div.card_container {
+  margin: 80px 0 130px 0;
+  width: 100%;
+  gap: 20px;
+  display: flex;
+  justify-content: center;
+}
+.ourPlan > div.card_container > div.card {
+  position: relative;
+  border: 10px solid #f7f7f7;
+}
+.ourPlan > div.card_container > div.card div.row {
+  width: 300px;
+  background: white;
+  position: relative;
+  z-index: 999;
+  border-right: 1px solid #e5e4e3;
+}
+.ourPlan > div.card_container > div.card div.row > * {
+  width: 100%;
+}
+.ourPlan > div.card_container > div.card div.row > .plan_header {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #e5e4e3;
+}
+.ourPlan > div.card_container > div.card div.row > .plan_header > h2 {
+  color: #607afe;
+  font-size: 30px;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_body > div {
+  background-color: #f8f8f8;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  margin-left: 1px;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_body > div > span:nth-child(1) {
+  color: #505050;
+  font-size: 22px;
+  font-weight: bold;
+  transform: translateY(13px);
+}
+.ourPlan > div.card_container > div.card div.row > .panel_body > div > span:nth-child(2) {
+  font-size: 60px;
+  font-weight: bold;
+  color: #607afe;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_body > div > sup:nth-child(3) {
+  font-size: 17px;
+  font-weight: bold;
+  color: #607afe;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_body > div span:nth-child(4) {
+  transform: translateY(41px);
+  margin-left: -14px;
+  font-style: italic;
+  color: #888888;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_list > ul {
+  color: #5d5f65;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_list > ul > li {
+  width: 100%;
+  padding: 30px;
+  text-transform: capitalize;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_footer {
+  background-color: #f8f8f8;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  margin-left: 1px;
+  margin-bottom: 1px;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_footer > a {
+  text-transform: uppercase;
+  color: #5d5f65;
+  border: 2px solid white;
+  padding: 13px 29px;
+  border-radius: 50px;
+  font-size: 15px;
+  font-weight: bold;
+  transition: 0.2s;
+}
+.ourPlan > div.card_container > div.card div.row > .panel_footer > a:hover {
+  color: #607afe;
+  border-color: #607afe;
 }/*# sourceMappingURL=master.css.map */
