--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -216,7 +216,7 @@ main > div {
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-direction: column; 
+          flex-direction: column;
           cursor: pointer;
           &:hover i:nth-of-type(1) {
             left: 0;
@@ -233,9 +233,9 @@ main > div {
           > h2 {
             padding-top: 30px;
           }
-          >a{
+          > a {
             position: absolute;
-            bottom:10px;
+            bottom: 10px;
           }
           > div {
             width: 100px;
@@ -291,7 +291,7 @@ main > div {
   justify-content: center;
   align-items: center;
   // height: 100vh;
-  >.row{
+  > .row {
     margin-bottom: 174px;
   }
   article {
@@ -307,27 +307,27 @@ main > div {
       width: 100%;
       margin: 20px;
     }
-    p{
+    p {
       height: 200px;
       margin-bottom: 75px !important;
     }
   }
-  >.services_header{
+  > .services_header {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     color: white;
     margin: 80px 0;
-    >*{
+    > * {
       width: 100%;
     }
-    >h2{
+    > h2 {
       text-align: center;
       font-size: 35px;
       margin: 30px 0;
     }
-    >p{
+    > p {
       width: 40%;
       text-align: center;
       line-height: 30px;
@@ -413,22 +413,21 @@ main > div {
     }
   }
 }
-.our_work{
+.our_work {
   background-color: #f7f8f9;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  >.our_work_header{
+  > .our_work_header {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 100px;
-    >h2{
+    > h2 {
       font-size: 40px;
-      
     }
-    >p{
+    > p {
       color: #5f6166;
       width: 80%;
       text-align: center;
@@ -437,7 +436,7 @@ main > div {
       font-size: 20px;
     }
   }
-  >.piture_content{
+  > .piture_content {
     margin-top: 100px;
     // border: 6px solid yellowgreen;
     width: 50%;
@@ -446,37 +445,39 @@ main > div {
     align-items: center;
     align-content: center;
     gap: 26px;
-    >div{
+    > div {
       // background: red;
       width: 400px;
       height: 300px;
       position: relative;
-      &:hover > div{
+      &:hover > div {
         visibility: visible;
         opacity: 1;
       }
-      >div{
+      > div {
         width: 100%;
         height: 100%;
         position: absolute;
-        top: 0;left: 0;
-        background-image: linear-gradient(to top, #e8eaf0 0,#607afe  100%);
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(to top, #e8eaf0 0, #607afe 100%);
         display: flex;
         align-items: center;
         justify-content: center;
         opacity: 0;
-        visibility: hidden;transition: 0.8s;
+        visibility: hidden;
+        transition: 0.8s;
         cursor: pointer;
-        >div{
-          >svg{
+        > div {
+          > svg {
             color: white;
           }
         }
       }
-      >figure{
+      > figure {
         width: 100%;
         // border: 3px solid black;
-        >img{
+        > img {
           width: 400px;
           height: 300px;
           object-fit: cover;
@@ -484,15 +485,164 @@ main > div {
       }
     }
   }
-  >.button{
+  > .button {
     margin-top: 110px;
     margin-bottom: 140px;
     color: white;
-    >a{
+    > a {
       padding: 13px 29px;
       background-color: #ffa737;
       border-radius: 25px;
       font-size: 14px;
+      &:hover {
+        background-color: #ffb251;
+      }
+    }
+  }
+}
+.ourPlan {
+  >.ourPlan_header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+    margin-top: 130px;
+    >h2{
+      color: white;
+      font-size: 40px;
+
+    }
+    >p{
+      color: white;
+      width: 30%;
+      // border: 1px solid black;
+      text-align: center;
+      font-size: 20px;
+      line-height: 40px;
+      margin-top: 30px;
+    }
+  }
+  position: relative;
+  &::before {
+    content: "";
+    background-image: linear-gradient(120deg, #3b46c4 0, #4750d9, #2581bd 100%);
+    opacity: 0.8;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    // z-index: -1000;
+  }
+  background-image: url(../img/ghasem1.jpg);
+  background-size: cover;
+  // height: 100vh;
+  > div.card_container {
+    margin: 80px 0 130px 0;
+    width: 100%;
+    gap: 20px;
+    // border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    > div.card {
+      position: relative;
+      border: 10px solid #f7f7f7;
+
+      div.row {
+        width: 300px;
+        background: white;
+        position: relative;
+        z-index: 999;
+        border-right: 1px solid #e5e4e3;
+
+        > * {
+          width: 100%;
+        }
+        > .plan_header {
+          height: 80px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          // background: #000;
+          border-bottom: 1px solid #e5e4e3;
+          > h2 {
+            color: #607afe;
+            // background: #000;
+            font-size: 30px;
+          }
+        }
+        > .panel_body {
+          > div {
+            background-color: #f8f8f8;
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+            margin-left: 1px;
+            > span:nth-child(1) {
+              color: #505050;
+              font-size: 22px;
+              font-weight: bold;
+              transform: translateY(13px);
+            }
+            > span:nth-child(2) {
+              font-size: 60px;
+              font-weight: bold;
+              color: #607afe;
+            }
+            > sup:nth-child(3) {
+              font-size: 17px;
+              font-weight: bold;
+              color: #607afe;
+            }
+            span:nth-child(4) {
+              transform: translateY(41px);
+              margin-left: -14px;
+              font-style: italic;
+              color: #888888;
+              // transform: translateX(-4px);
+            }
+          }
+        }
+        > .panel_list {
+          > ul {
+            color: #5d5f65;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            text-align: center;
+            > li {
+              width: 100%;
+              padding: 30px;
+              text-transform: capitalize;
+            }
+          }
+        }
+        > .panel_footer {
+          background-color: #f8f8f8;
+          padding: 40px;
+          display: flex;
+          justify-content: center;
+          cursor: pointer;
+          margin-left: 1px;
+          margin-bottom: 1px;
+          > a {
+            text-transform: uppercase;
+            color: #5d5f65;
+            border: 2px solid white;
+            padding: 13px 29px;
+            border-radius: 50px;
+            font-size: 15px;
+            font-weight: bold;
+            transition: 0.2s;
+            &:hover {
+              color: #607afe;
+              border-color: #607afe;
+            }
+          }
+        }
+      }
     }
   }
 }
