--- a/assets/stylesheet/master.css
+++ b/assets/stylesheet/master.css
@@ -348,78 +348,6 @@ main > div {
   font-size: 20px;
 }
 
-.free {
-  width: 100%;
-  background-image: url(../img/case-study-gallery-3-1.jpg);
-  background-size: cover;
-  padding: 100px 0;
-  justify-content: center;
-  position: relative;
-}
-.free::before {
-  content: "";
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.415);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.free > div {
-  width: 50%;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.free > div > * {
-  color: white;
-  text-align: center;
-  margin: 25px 0;
-  width: 100%;
-}
-.free > div > a {
-  display: flex;
-  width: 200px;
-  height: 50px;
-  border-radius: 50px;
-  background-color: orangered;
-  color: white;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.footer_bottom {
-  width: 100%;
-  padding: 100px 0;
-  display: flex;
-  justify-content: center;
-}
-.footer_bottom > div {
-  width: 50%;
-}
-.footer_bottom > div > * {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-}
-.footer_bottom > div > figure > img {
-  width: 200px;
-}
-.footer_bottom > div > ul > li {
-  margin: 0 20px;
-  text-transform: uppercase;
-  font-size: 20px;
-}
-.footer_bottom > div > p {
-  text-align: center;
-}
-
 .our_work {
   background-color: #f7f8f9;
   align-items: center;
@@ -707,4 +635,134 @@ main > div {
 }
 .latestNews > div > .button_footer > a:hover {
   background-color: #ffb251;
+}
+
+.client_sey {
+  background-color: #fff;
+}
+.client_sey > div.row {
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  margin: 110px 0;
+}
+.client_sey > div.row > h2 {
+  font-size: 40px;
+  text-transform: capitalize;
+}
+.client_sey > div.row > figure {
+  margin: 60px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.client_sey > div.row > figure > img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+.client_sey > div.row > figure > figcaption {
+  width: 80%;
+  text-align: center;
+  color: #2d2d2d;
+  line-height: 25px;
+  margin-top: 20px;
+}
+.client_sey > div.row > p {
+  font-size: 15px;
+  text-transform: uppercase;
+  color: #393939;
+}
+.client_sey > div.row > p > span {
+  font-weight: bold;
+  text-transform: capitalize;
+  color: #2e2e2e;
+}
+.client_sey > div.row > div {
+  margin-top: 30px;
+}
+
+.comany_logo {
+  padding: 60px 0;
+  border-top: 1px solid #e8eaf0;
+  background-color: #fefefe;
+  align-items: center;
+  justify-content: center;
+}
+.comany_logo > div.row {
+  margin: 0 200px;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.free {
+  width: 100%;
+  background-image: url(../img/case-study-gallery-3-1.jpg);
+  background-size: cover;
+  padding: 100px 0;
+  justify-content: center;
+  position: relative;
+}
+.free::before {
+  content: "";
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.415);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.free > div {
+  width: 50%;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.free > div > * {
+  color: white;
+  text-align: center;
+  margin: 25px 0;
+  width: 100%;
+}
+.free > div > a {
+  display: flex;
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: orangered;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.footer_bottom {
+  width: 100%;
+  padding: 100px 0;
+  display: flex;
+  justify-content: center;
+}
+.footer_bottom > div {
+  width: 50%;
+}
+.footer_bottom > div > * {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+.footer_bottom > div > figure > img {
+  width: 200px;
+}
+.footer_bottom > div > ul > li {
+  margin: 0 20px;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+.footer_bottom > div > p {
+  text-align: center;
 }/*# sourceMappingURL=master.css.map */
