--- a/assets/stylesheet/master.scss
+++ b/assets/stylesheet/master.scss
@@ -335,84 +335,7 @@ main > div {
     }
   }
 }
-.free {
-  width: 100%;
-  // height: 300px;
-  background-image: url(../img/case-study-gallery-3-1.jpg);
-  background-size: cover;
-  padding: 100px 0;
-  justify-content: center;
-  position: relative;
-  &::before {
-    content: "";
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.415);
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  > div {
-    width: 50%;
-    position: relative;
-    // border: 1px solid white;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    > * {
-      color: white;
-      text-align: center;
-      margin: 25px 0;
-      width: 100%;
-    }
-    > a {
-      display: flex;
-      width: 200px;
-      height: 50px;
-      border-radius: 50px;
-      background-color: orangered;
-      color: white;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      text-decoration: none;
-      text-transform: uppercase;
-    }
-  }
-}
 
-.footer_bottom {
-  width: 100%;
-  padding: 100px 0;
-  display: flex;
-  justify-content: center;
-  > div {
-    width: 50%;
-    // border: 1px solid rgb(195, 30, 30);
-    > * {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      margin: 20px 0;
-    }
-    > figure {
-      > img {
-        width: 200px;
-      }
-    }
-    > ul {
-      > li {
-        margin: 0 20px;
-        text-transform: uppercase;
-        font-size: 20px;
-      }
-    }
-    > p {
-      text-align: center;
-    }
-  }
-}
 .our_work {
   background-color: #f7f8f9;
   align-items: center;
@@ -722,6 +645,144 @@ main > div {
         &:hover{
           background-color: #ffb251;        }
       }
+    }
+  }
+}
+.client_sey{
+  background-color: #fff;
+  >div.row{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin: 110px 0;
+    >h2{
+      font-size: 40px;
+      text-transform: capitalize;
+    }
+    >figure{
+      margin: 60px 0;
+      // border: 1px solid black;
+      // width: 100%;
+      display: flex;
+      // justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      >img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+      }
+      >figcaption{
+        width: 80%;
+        text-align: center;
+        color: #2d2d2d;
+        line-height: 25px;
+        margin-top: 20px;
+      }
+    }
+    >p{
+      font-size: 15px;
+      text-transform: uppercase;
+      color: #393939;
+      >span{
+        font-weight: bold;
+        text-transform: capitalize;
+        color: #2e2e2e;
+      }
+    }
+    >div{
+      margin-top: 30px;
+    }
+  }
+}
+.comany_logo{
+  padding: 60px 0;
+  border-top: 1px solid #e8eaf0;
+  background-color: #fefefe;
+  align-items: center;
+  justify-content: center;
+  >div.row{
+    margin: 0 200px;
+    justify-content: space-around;
+    width: 100%;
+  }
+}
+
+.free {
+  width: 100%;
+  // height: 300px;
+  background-image: url(../img/case-study-gallery-3-1.jpg);
+  background-size: cover;
+  padding: 100px 0;
+  justify-content: center;
+  position: relative;
+  &::before {
+    content: "";
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.415);
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  > div {
+    width: 50%;
+    position: relative;
+    // border: 1px solid white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    > * {
+      color: white;
+      text-align: center;
+      margin: 25px 0;
+      width: 100%;
+    }
+    > a {
+      display: flex;
+      width: 200px;
+      height: 50px;
+      border-radius: 50px;
+      background-color: orangered;
+      color: white;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      text-decoration: none;
+      text-transform: uppercase;
+    }
+  }
+}
+
+.footer_bottom {
+  width: 100%;
+  padding: 100px 0;
+  display: flex;
+  justify-content: center;
+  > div {
+    width: 50%;
+    // border: 1px solid rgb(195, 30, 30);
+    > * {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin: 20px 0;
+    }
+    > figure {
+      > img {
+        width: 200px;
+      }
+    }
+    > ul {
+      > li {
+        margin: 0 20px;
+        text-transform: uppercase;
+        font-size: 20px;
+      }
+    }
+    > p {
+      text-align: center;
     }
   }
 }
